<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.details.DetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/posterBackdrop"
                        android:layout_width="match_parent"
                        android:layout_height="275dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sample_poster"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fg_card"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/posterNull"
                        android:layout_width="match_parent"
                        android:layout_height="275dp"
                        android:src="@drawable/ic_error"
                        android:background="@color/titleColor"
                        android:visibility="gone"
                        android:contentDescription="@string/image_empty"/>

                    <TextView
                        android:id="@+id/tvRatingDetail"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@drawable/star"
                        android:gravity="center"
                        android:text="@string/sample_rating"
                        android:textStyle="bold"
                        android:textColor="@color/bgColor"
                        tools:ignore="RtlHardcoded"
                        android:textSize="@dimen/text_size_rating"/>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/roundedPosterDetail"
                android:layout_width="135dp"
                android:layout_height="220dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:elevation="4dp"
                android:src="@drawable/sample_poster"
                app:layout_constraintBottom_toBottomOf="@+id/cardViewTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop"
                app:riv_corner_radius="12dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/yellowStar"
                android:elevation="4dp"
                android:src="@drawable/ic_favorite_border"
                android:tint="@color/bgColor"
                app:borderWidth="0dp"
                app:layout_constraintBottom_toBottomOf="@id/cardViewTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop"
                app:rippleColor="@color/primaryColor"
                android:contentDescription="@string/favorite" />

            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/sample_title"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/roundedPosterDetail"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/sample_release"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toEndOf="@id/roundedPosterDetail"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDetail" />

            <TextView
                android:id="@+id/tvOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/others"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_subheader"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roundedPosterDetail" />

            <View
                android:id="@+id/barrierOthers"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@color/titleColor"
                app:layout_constraintEnd_toEndOf="@id/tvOthers"
                app:layout_constraintStart_toStartOf="@id/tvOthers"
                app:layout_constraintTop_toBottomOf="@id/tvOthers" />


                    <TextView
                        android:id="@+id/tvHeaderLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/language"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/barrierOthers"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/colonLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:text="@string/colon"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintStart_toEndOf="@+id/tvHeaderLanguage"
                        app:layout_constraintTop_toBottomOf="@id/barrierOthers"/>

                    <TextView
                        android:id="@+id/tvLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:text="@string/en"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/barrierOthers"
                        app:layout_constraintStart_toEndOf="@id/colonLanguage" />

                    <TextView
                        android:id="@+id/tvHeaderPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="@dimen/activity_vertical_margin"
                        android:text="@string/popularity"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/tvHeaderLanguage"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/colonPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/colon"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/tvHeaderLanguage"
                        app:layout_constraintStart_toEndOf="@id/tvHeaderPopularity"/>

                    <TextView
                        android:id="@+id/tvPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:text="@string/sample_popularity"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/tvHeaderLanguage"
                        app:layout_constraintStart_toEndOf="@id/colonPopularity"/>

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/overview"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_subheader"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvHeaderPopularity" />

            <View
                android:id="@+id/barrierDesc"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@color/titleColor"
                app:layout_constraintEnd_toEndOf="@id/textView_description"
                app:layout_constraintStart_toStartOf="@id/textView_description"
                app:layout_constraintTop_toBottomOf="@id/textView_description" />

            <TextView
                android:id="@+id/tvOverviewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/sample_overview"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrierDesc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/svLoadingDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:SpinKit_Style="DoubleBounce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>